fix test failures